Remove call to /bin/start.
Signed-off-by: Santiago Pericasgeertsen <santiago.pericasgeertsen@oracle.com>